--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 # Ignore configuration files that may contain sensitive information.
-sites/*/settings*.php
+docroot/sites/*/settings*.php
 
 # Ignore paths that contain user-generated content.
-sites/*/files
-sites/*/private
-sites/default
+docroot/sites/*/files
+docroot/sites/*/private
+docroot/sites/default
 
 # Packages #
 ############
@@ -47,22 +47,24 @@ user.anonymous.json
 
 # Ignore configuration files that may contain sensitive information #
 #####################################################################
-.htaccess
-.htpasswd
-sites/*/*settings*.php
-sites/*/settings.php
+docroot/.htaccess
+docroot/.htpasswd
+docroot/sites/*/*settings*.php
+docroot/sites/*/settings.php
 #sites/default/settings.php
-sites/default/tmp
-landing/download
+docroot/sites/default/tmp
+docroot/landing/download
 
 # Ignore paths that contain generated content #
 ###############################################
-cache/
-files/
-sites/*/files
+docroot/cache/
+docroot/files/
+docroot/sites/*/files
 sites/*/private
-sites/*/temp
-sites/*/tmp/
+docroot/sites/*/temp
+docroot/sites/*/tmp/
+docroot/private
+docroot/temp
 private
 temp
 
@@ -117,4 +119,4 @@ www/sites/default/tmp/.htaccess
 
 # development modules #
 #######################
-sites/all/modules/development
+docroot/sites/all/modules/development
