zoekformulier op woordenboek

--- a/build.xml
+++ b/build.xml
@@ -17,7 +17,7 @@
         </exec>
     </target>
 
-    <target name="setup-phing-drush" depends="load-properties">
+    <target name="setup-phing-drush">
 
         <!-- Clone the project -->
         <phingcall target="setup-git-repo">
@@ -58,7 +58,7 @@
     </target>
 
     <!-- defaults for development environment -->
-    <target name="dev-modules" depends="load-properties, setup-phing-drush">
+    <target name="dev-modules" depends="setup-phing-drush">
         <!-- downloads the contributed modules -->
         <drush command="make" assume="yes">
             <param>dev.make</param>
@@ -78,6 +78,8 @@
             <param>simpletest</param>
             <param>dblog</param>
             <param>syslog</param>
+            <param>contect_ui</param>
+            <param>features_ui</param>
             <option name="uri">${build.projects.${project}.uri}</option>
             <option name="root">${build.projects.${project}.abs.path}</option>
         </drush>
@@ -95,7 +97,7 @@
         <phingcall target="cc"/>
     </target>
 
-    <target name="dev-settings" depends="load-properties, setup-phing-drush">
+    <target name="dev-settings" depends="setup-phing-drush">
         <!-- dev theme -->
         <drush command="vset" assume="yes">
             <param>admin_theme</param>
@@ -192,7 +194,7 @@
     </target>
 
     <!-- clear cache -->
-    <target name="cc" depends="load-properties, setup-phing-drush">
+    <target name="cc" depends="setup-phing-drush">
 
         <drush command="cc">
             <param>all</param>
