--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -18,8 +18,8 @@ jobs:
           debug: true
           script: |
             cd ${{ secrets.PRODUCTION_DIR }}
-            chmod a+w sites/${{ secrets.SITE_DIR }}
-            chmod a+w sites/${{ secrets.SITE_DIR }}/settings.php
+            chmod a+w docroot/sites/${{ secrets.SITE_DIR }}
+            chmod a+w docroot/sites/${{ secrets.SITE_DIR }}/settings.php
             git pull origin master
-            chmod a-w sites/${{ secrets.SITE_DIR }}
-            chmod a-w sites/${{ secrets.SITE_DIR }}/settings.php
+            chmod a-w docroot/sites/${{ secrets.SITE_DIR }}
+            chmod a-w docroot/sites/${{ secrets.SITE_DIR }}/settings.php
