--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -23,4 +23,5 @@ jobs:
             git pull origin master
             chmod a-w docroot/sites/${{ secrets.SITE_DIR }}
             chmod a-w docroot/sites/${{ secrets.SITE_DIR }}/settings.php
+            drush updb --y --root=${{ secrets.PRODUCTION_DIR }}/docroot
             drush st --root=${{ secrets.PRODUCTION_DIR }}/docroot
